<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homePageToolbar"
            android:title="@string/home"
            android:orderInCategory="1"
            android:icon="@drawable/home"
            app:showAsAction="always" />

        <item
            android:id="@+id/savedImagesPageToolbar"
            android:title="@string/savedImages"
            android:orderInCategory="2"
            android:icon="@drawable/saved"
            app:showAsAction="always" />

        <item
            android:id="@+id/helpToolbar"
            android:title="@string/help"
            android:orderInCategory="3"
            android:icon="@drawable/help"
            app:showAsAction="always" />

        <item
            android:id="@+id/overflowMenuToolbar"
            android:title="@string/help"
            android:orderInCategory="4"
            app:showAsAction="never" />

    </group>

</menu>