<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment"
    android:id="@+id/fragmentLocation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#336A0DAD">

        <TextView
            android:id="@+id/imageDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:textSize="20sp"
            android:layout_marginTop="50sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            style="?android:attr/progressBarStyleHorizontal"
            android:background="@color/white"
            android:layout_marginTop="10sp"/>

        <TextView
            android:id="@+id/imageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:layout_marginTop="10sp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@color/gray"
            android:padding="5sp"
            android:layout_marginTop="15sp"
            android:contentDescription="@string/contentDescription" />

        <Button
            android:id="@+id/saveImgBtn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/saveImgBtn"
            android:layout_marginTop="20sp"/>

        <Button
            android:id="@+id/deleteImgBtn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/deleteImgBtn" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/hideBtn"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:text="@string/hideBtn"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>