<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:orientation="vertical"
    android:background="@drawable/welcome_background">

    <ImageView
        android:id="@+id/nasaLogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/nasa_logo"
        android:layout_marginTop="20sp"/>

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:layout_marginTop="30sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:layout_weight="20"
            android:textColorHint="@color/cardview_light_background"
            android:textColor="@color/cardview_light_background"
            android:background="@color/purple_700"
            android:inputType="text"/>

        <Button
            android:id="@+id/saveUserNameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveUserNameBtn"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>